client/src/assets/CSS/teacher_page.css
.teacher-portal-container {
  width: 100vw;
  height: 80vh;
  display: flex;
}

.teacher.left-container {
  width: 65%;
  height: 100%;
  padding: 0 2.5%;

  border: 1px solid black;
}

.teacher.right-container {
  width: 34%;
  height: 100%;
  border: 1px solid black;
}

.teacher-student-table-row {
  background-color: white;
  cursor: pointer;
}
.assignments-tab.table-row {
  background-color: white;
}

.assignment-tab-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-flow: column;
  justify-content: space-between;
}
.assignment-tab-header {
  display: flex;
  justify-content: space-between;
}
.assignment-box-top {
  overflow-y: auto;
}
.assignment-footer {
  display: flex;
  justify-content: center;
}

